--- a/test-project.cabal
+++ b/test-project.cabal
@@ -17,6 +17,8 @@ cabal-version:       >=1.10
 
 executable test-project
   main-is:             Main.hs
+-- profiling:
+  ghc-options:         -rtsopts -auto-all
   -- other-modules:
   -- other-extensions:
   build-depends:       array >= 0.5.1.0
