--- a/test-project.cabal
+++ b/test-project.cabal
@@ -30,5 +30,6 @@ executable test-project
                      , random
                      , transformers >= 0.4.2.0
                      , vector
+                     , QuickCheck
   -- hs-source-dirs:
   default-language:    Haskell2010
