--- a/test-project.cabal
+++ b/test-project.cabal
@@ -30,6 +30,6 @@ executable test-project
                      , random
                      , transformers >= 0.4.2.0
                      , vector
-                     , QuickCheck
+                     , parsec >= 3.1.9
   -- hs-source-dirs:
   default-language:    Haskell2010
