--- a/test-project.cabal
+++ b/test-project.cabal
@@ -31,5 +31,6 @@ executable test-project
                      , transformers >= 0.4.2.0
                      , vector
                      , parsec >= 3.1.9
+                     , criterion >= 1.1.0.0
   -- hs-source-dirs:
   default-language:    Haskell2010
