--- a/test-project.cabal
+++ b/test-project.cabal
@@ -33,5 +33,7 @@ executable test-project
                      , parsec >= 3.1.9
                      , criterion >= 1.1.0.0
                      , hslogger >= 1.2.9
+                     , Chart
+                     , Chart-cairo
   -- hs-source-dirs:
   default-language:    Haskell2010
