--- a/test-project.cabal
+++ b/test-project.cabal
@@ -38,5 +38,6 @@ executable test-project
                      , hslogger >= 1.2.9
                      , Chart
                      , Chart-cairo
+                     , Chart-diagrams
   -- hs-source-dirs:
   default-language:    Haskell2010
