--- a/test-project.cabal
+++ b/test-project.cabal
@@ -15,8 +15,34 @@ build-type:          Simple
 -- extra-source-files:
 cabal-version:       >=1.10
 
-executable test-project
+executable cflp
   main-is:             Main.hs
+-- profiling:
+  ghc-options:         -rtsopts -auto-all
+  other-modules:       AP
+                     , CFLP
+                     , MIP
+  -- other-extensions:
+  build-depends:       array >= 0.5.1.0
+                     , base >=4.8 && <4.9
+                     , containers >= 0.5.6.2
+                     , cplex
+                     , criterion >= 1.1.0.0
+                     , directory
+                     , filepath >= 1.4.0.0
+                     , hslogger >= 1.2.9
+                     , mtl >= 2.2.1
+                     , old-locale >= 1.0.0.7
+                     , parsec >= 3.1.9
+                     , random
+                     , time >= 1.5.0.1
+                     , transformers >= 0.4.2.0
+                     , vector
+  -- hs-source-dirs:
+  default-language:    Haskell2010
+
+executable cflp-plot
+  main-is:             Plot-Main.hs
 -- profiling:
   ghc-options:         -rtsopts -auto-all
   other-modules:       AP
