--- a/test-project.cabal
+++ b/test-project.cabal
@@ -33,6 +33,7 @@ executable cflp
                      , mtl >= 2.2.1
                      , old-locale >= 1.0.0.7
                      , parsec >= 3.1.9
+                     , process >= 1.2.3.0
                      , random
                      , time >= 1.5.0.1
                      , transformers >= 0.4.2.0
