--- a/test-project.cabal
+++ b/test-project.cabal
@@ -32,6 +32,7 @@ executable cflp
                      , hslogger >= 1.2.9
                      , mtl >= 2.2.1
                      , old-locale >= 1.0.0.7
+                     , optparse-applicative >= 0.11.0.2
                      , parsec >= 3.1.9
                      , process >= 1.2.3.0
                      , random
@@ -62,6 +63,7 @@ executable cflp-plot
                      , hslogger >= 1.2.9
                      , mtl >= 2.2.1
                      , old-locale >= 1.0.0.7
+                     , optparse-applicative >= 0.11.0.2
                      , parsec >= 3.1.9
                      , random
                      , time >= 1.5.0.1
