--- a/test-project.cabal
+++ b/test-project.cabal
@@ -31,6 +31,7 @@ executable cflp
                      , filepath >= 1.4.0.0
                      , hslogger >= 1.2.9
                      , mtl >= 2.2.1
+                     , MissingH >= 1.3.0.1
                      , old-locale >= 1.0.0.7
                      , optparse-applicative >= 0.11.0.2
                      , parsec >= 3.1.9
