--- a/test-project.cabal
+++ b/test-project.cabal
@@ -23,7 +23,8 @@ executable cflp
                      , CFLP
                      , MIP
   -- other-extensions:
-  build-depends:       array >= 0.5.1.0
+  build-depends:       MissingH >= 1.3.0.1
+                     , array >= 0.5.1.0
                      , base >=4.8 && <4.9
                      , containers >= 0.5.6.2
                      , cplex
@@ -31,12 +32,12 @@ executable cflp
                      , filepath >= 1.4.0.0
                      , hslogger >= 1.2.9
                      , mtl >= 2.2.1
-                     , MissingH >= 1.3.0.1
                      , old-locale >= 1.0.0.7
                      , optparse-applicative >= 0.11.0.2
                      , parsec >= 3.1.9
                      , process >= 1.2.3.0
                      , random
+                     , split >= 0.2.2
                      , time >= 1.5.0.1
                      , transformers >= 0.4.2.0
                      , vector
@@ -67,6 +68,7 @@ executable cflp-plot
                      , optparse-applicative >= 0.11.0.2
                      , parsec >= 3.1.9
                      , random
+                     , split >= 0.2.2
                      , time >= 1.5.0.1
                      , transformers >= 0.4.2.0
                      , vector
